# mini-activity-analytics-platform

./: .dockerignore  .gitignore  AI_USAGE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
apps/agent/: index.html  package.json  tailwind.config.ts  vite.config.js
apps/agent/src/: App.tsx  types.ts
apps/agent/src-tauri/: Cargo.toml  tauri.conf.json
apps/agent/src-tauri/capabilities/: default.json
apps/agent/src-tauri/src/: main.rs
apps/agent/src/components/organisms/: agent-control-panel.tsx  (+2 more)
apps/agent/src/lib/: tauri.ts
apps/agent/src/pages/: agent-page.tsx
apps/backend/: Dockerfile  package.json
apps/backend/runtime/: activity-store.json
apps/backend/src/: analytics.controller.ts  analytics.service.ts  app.module.ts  db.ts  main.ts  repository.ts
apps/browser-extension/: background.js  manifest.json  options.html  options.js  package.json  popup.html  popup.js
apps/dashboard/: Dockerfile  index.html  package.json  tailwind.config.ts  vite.config.js
apps/dashboard/src/: App.tsx
apps/dashboard/src/lib/: view-formatters.ts
apps/dashboard/src/pages/: dashboard-page.tsx
apps/shared-ui/: package.json  tsconfig.json
apps/shared-ui/scripts/: validate-runtime.mjs
apps/shared-ui/src/: index.ts
apps/shared-ui/src/atoms/: badge.tsx  button.tsx  card.tsx  input.tsx  select.tsx  textarea.tsx
apps/shared-ui/src/molecules/: panel-header.tsx  settings-field.tsx  stat-card.tsx  stat-row.tsx
apps/shared-ui/src/templates/: app-shell.tsx  page-hero.tsx
docs/adr/: 0001-platform-architecture.md
(+7 files in other folders)
