[package]
name = "mini-analytics-agent-ui"
version = "1.0.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
directories = "6.0.0"
parking_lot = "0.12.4"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
system-idle-time = "1.0.4"
tauri = { version = "2.1.1", features = [] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
] }
